Fix terminal font

--- a/src/starship/starship.toml
+++ b/src/starship/starship.toml
@@ -1,3 +1,5 @@
+# Require a Nerd Font version v2.3.3
+
 add_newline = false
 continuation_prompt = "[➜](bright-black) "
 
@@ -183,45 +185,45 @@ format = '\[[$symbol$cloud(\($project\))]($style)\]'
 format = '\[[$symbol]($style)\]'
 
 [os.symbols]
-# Alpaquita = ""
-Alpine = ""
-Amazon = ""
-Android = ""
-Arch = ""
-# Artix = ""
-CentOS = ""
-Debian = ""
-DragonFly = ""
-Emscripten = ""
-EndeavourOS = ""
-Fedora = ""
-FreeBSD = ""
-Garuda = "﯑"
-Gentoo = ""
-HardenedBSD = "ﲊ"
-Illumos = ""
-Linux = ""
-# Mabox = ""
-Macos = ""
-Manjaro = ""
-Mariner = ""
-MidnightBSD = ""
-Mint = ""
-NetBSD = ""
-NixOS = ""
-OpenBSD = ""
-openSUSE = ""
-OracleLinux = ""
-Pop = ""
-Raspbian = ""
-Redhat = ""
-RedHatEnterprise = ""
-Redox = ""
-Solus = "ﴱ"
-SUSE = ""
-Ubuntu = ""
-Unknown = ""
-Windows = ""
+# Alpaquita = " "
+Alpine = " "
+Amazon = " "
+Android = " "
+Arch = " "
+# Artix = " "
+CentOS = " "
+Debian = " "
+DragonFly = " "
+Emscripten = " "
+EndeavourOS = " "
+Fedora = " "
+FreeBSD = " "
+Garuda = "﯑ "
+Gentoo = " "
+HardenedBSD = "ﲊ "
+Illumos = " "
+Linux = " "
+# Mabox = " "
+Macos = " "
+Manjaro = " "
+Mariner = " "
+MidnightBSD = " "
+Mint = " "
+NetBSD = " "
+NixOS = " "
+OpenBSD = " "
+openSUSE = " "
+OracleLinux = " "
+Pop = " "
+Raspbian = " "
+Redhat = " "
+RedHatEnterprise = " "
+Redox = " "
+Solus = "ﴱ "
+SUSE = " "
+Ubuntu = " "
+Unknown = " "
+Windows = " "
 
 [package]
 format = '\[[$symbol$version]($style)\]'
